feat: generalize localization and currency support
